projects/pbrt_importer/python/parsing/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> statements_scene
Rule 1     statement_main -> statements_config world_begin statements_scene WORLD_END
Rule 2     basic_data_type -> STRING
Rule 3     basic_data_type -> NUMBER
Rule 4     statements_config -> statements_config statement_config
Rule 5     statements_config -> <empty>
Rule 6     data_list_items -> data_list_items basic_data_type
Rule 7     data_list_items -> <empty>
Rule 8     data_list -> L_SQUARE_BRACKET data_list_items R_SQUARE_BRACKET
Rule 9     statements_scene -> statements_scene statement_scene
Rule 10    statements_scene -> <empty>
Rule 11    argument -> STRING basic_data_type
Rule 12    argument -> STRING data_list
Rule 13    statement_include -> INCLUDE STRING
Rule 14    statement_scene -> statement_include
Rule 15    statement_config -> statement_include
Rule 16    world_begin -> WORLD_BEGIN
Rule 17    statement_scene -> ATTRIBUTE_BEGIN
Rule 18    statement_scene -> ATTRIBUTE_END
Rule 19    statement_scene -> TRANSFORM_BEGIN
Rule 20    statement_scene -> TRANSFORM_END
Rule 21    arguments -> arguments argument
Rule 22    arguments -> <empty>
Rule 23    statement_scene -> statement_transform
Rule 24    statement_transform -> IDENTITY
Rule 25    statement_transform -> TRANSLATE NUMBER NUMBER NUMBER
Rule 26    statement_transform -> SCALE NUMBER NUMBER NUMBER
Rule 27    statement_transform -> ROTATE NUMBER NUMBER NUMBER NUMBER
Rule 28    statement_transform -> LOOKAT NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 29    statement_transform -> COORDINATE_SYSTEM STRING
Rule 30    statement_transform -> COORDINATE_SYSTEM_TRANSFORM STRING
Rule 31    statement_transform -> TRANSFORM L_SQUARE_BRACKET NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER R_SQUARE_BRACKET
Rule 32    statement_transform -> CONCAT_TRANSFORM L_SQUARE_BRACKET NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER R_SQUARE_BRACKET
Rule 33    statement_scene -> MATERIAL STRING arguments
Rule 34    statement_scene -> NAMED_MATERIAL STRING
Rule 35    statement_scene -> MAKE_NAMED_MATERIAL STRING arguments
Rule 36    statement_scene -> TEXTURE STRING STRING STRING arguments
Rule 37    statement_scene -> LIGHT_SOURCE STRING arguments
Rule 38    statement_scene -> AREA_LIGHT_SOURCE STRING arguments
Rule 39    statement_scene -> OBJECT_BEGIN STRING
Rule 40    statement_scene -> OBJECT_END
Rule 41    statement_scene -> OBJECT_INSTANCE STRING
Rule 42    statement_scene -> SHAPE STRING arguments
Rule 43    statement_scene -> REVERSE_ORIENTATION
Rule 44    statement_config -> statement_transform
Rule 45    statement_config -> CAMERA STRING arguments
Rule 46    statement_config -> SAMPLER STRING arguments
Rule 47    statement_config -> FILM STRING arguments
Rule 48    statement_config -> FILTER STRING arguments
Rule 49    statement_config -> INTEGRATOR STRING arguments
Rule 50    statement_config -> ACCELERATOR STRING arguments

Terminals, with rules where they appear

ACCELERATOR          : 50
AREA_LIGHT_SOURCE    : 38
ATTRIBUTE_BEGIN      : 17
ATTRIBUTE_END        : 18
CAMERA               : 45
COMMENT              : 
CONCAT_TRANSFORM     : 32
COORDINATE_SYSTEM    : 29
COORDINATE_SYSTEM_TRANSFORM : 30
FILM                 : 47
FILTER               : 48
IDENTITY             : 24
INCLUDE              : 13
INTEGRATOR           : 49
LIGHT_SOURCE         : 37
LOOKAT               : 28
L_SQUARE_BRACKET     : 8 31 32
MAKE_NAMED_MATERIAL  : 35
MATERIAL             : 33
NAMED_MATERIAL       : 34
NUMBER               : 3 25 25 25 26 26 26 27 27 27 27 28 28 28 28 28 28 28 28 28 31 31 31 31 31 31 31 31 31 31 31 31 31 31 31 31 32 32 32 32 32 32 32 32 32 32 32 32 32 32 32 32
OBJECT_BEGIN         : 39
OBJECT_END           : 40
OBJECT_INSTANCE      : 41
REVERSE_ORIENTATION  : 43
ROTATE               : 27
R_SQUARE_BRACKET     : 8 31 32
SAMPLER              : 46
SCALE                : 26
SHAPE                : 42
STRING               : 2 11 12 13 29 30 33 34 35 36 36 36 37 38 39 41 42 45 46 47 48 49 50
TEXTURE              : 36
TRANSFORM            : 31
TRANSFORM_BEGIN      : 19
TRANSFORM_END        : 20
TRANSLATE            : 25
WORLD_BEGIN          : 16
WORLD_END            : 1
error                : 

Nonterminals, with rules where they appear

argument             : 21
arguments            : 21 33 35 36 37 38 42 45 46 47 48 49 50
basic_data_type      : 6 11
data_list            : 12
data_list_items      : 6 8
statement_config     : 4
statement_include    : 14 15
statement_main       : 
statement_scene      : 9
statement_transform  : 23 44
statements_config    : 1 4
statements_scene     : 1 9 0
world_begin          : 1

Parsing method: LALR

state 0

    (0) S' -> . statements_scene
    (9) statements_scene -> . statements_scene statement_scene
    (10) statements_scene -> .

    ATTRIBUTE_BEGIN reduce using rule 10 (statements_scene -> .)
    ATTRIBUTE_END   reduce using rule 10 (statements_scene -> .)
    TRANSFORM_BEGIN reduce using rule 10 (statements_scene -> .)
    TRANSFORM_END   reduce using rule 10 (statements_scene -> .)
    MATERIAL        reduce using rule 10 (statements_scene -> .)
    NAMED_MATERIAL  reduce using rule 10 (statements_scene -> .)
    MAKE_NAMED_MATERIAL reduce using rule 10 (statements_scene -> .)
    TEXTURE         reduce using rule 10 (statements_scene -> .)
    LIGHT_SOURCE    reduce using rule 10 (statements_scene -> .)
    AREA_LIGHT_SOURCE reduce using rule 10 (statements_scene -> .)
    OBJECT_BEGIN    reduce using rule 10 (statements_scene -> .)
    OBJECT_END      reduce using rule 10 (statements_scene -> .)
    OBJECT_INSTANCE reduce using rule 10 (statements_scene -> .)
    SHAPE           reduce using rule 10 (statements_scene -> .)
    REVERSE_ORIENTATION reduce using rule 10 (statements_scene -> .)
    INCLUDE         reduce using rule 10 (statements_scene -> .)
    IDENTITY        reduce using rule 10 (statements_scene -> .)
    TRANSLATE       reduce using rule 10 (statements_scene -> .)
    SCALE           reduce using rule 10 (statements_scene -> .)
    ROTATE          reduce using rule 10 (statements_scene -> .)
    LOOKAT          reduce using rule 10 (statements_scene -> .)
    COORDINATE_SYSTEM reduce using rule 10 (statements_scene -> .)
    COORDINATE_SYSTEM_TRANSFORM reduce using rule 10 (statements_scene -> .)
    TRANSFORM       reduce using rule 10 (statements_scene -> .)
    CONCAT_TRANSFORM reduce using rule 10 (statements_scene -> .)
    $end            reduce using rule 10 (statements_scene -> .)

    statements_scene               shift and go to state 1

state 1

    (0) S' -> statements_scene .
    (9) statements_scene -> statements_scene . statement_scene
    (14) statement_scene -> . statement_include
    (17) statement_scene -> . ATTRIBUTE_BEGIN
    (18) statement_scene -> . ATTRIBUTE_END
    (19) statement_scene -> . TRANSFORM_BEGIN
    (20) statement_scene -> . TRANSFORM_END
    (23) statement_scene -> . statement_transform
    (33) statement_scene -> . MATERIAL STRING arguments
    (34) statement_scene -> . NAMED_MATERIAL STRING
    (35) statement_scene -> . MAKE_NAMED_MATERIAL STRING arguments
    (36) statement_scene -> . TEXTURE STRING STRING STRING arguments
    (37) statement_scene -> . LIGHT_SOURCE STRING arguments
    (38) statement_scene -> . AREA_LIGHT_SOURCE STRING arguments
    (39) statement_scene -> . OBJECT_BEGIN STRING
    (40) statement_scene -> . OBJECT_END
    (41) statement_scene -> . OBJECT_INSTANCE STRING
    (42) statement_scene -> . SHAPE STRING arguments
    (43) statement_scene -> . REVERSE_ORIENTATION
    (13) statement_include -> . INCLUDE STRING
    (24) statement_transform -> . IDENTITY
    (25) statement_transform -> . TRANSLATE NUMBER NUMBER NUMBER
    (26) statement_transform -> . SCALE NUMBER NUMBER NUMBER
    (27) statement_transform -> . ROTATE NUMBER NUMBER NUMBER NUMBER
    (28) statement_transform -> . LOOKAT NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (29) statement_transform -> . COORDINATE_SYSTEM STRING
    (30) statement_transform -> . COORDINATE_SYSTEM_TRANSFORM STRING
    (31) statement_transform -> . TRANSFORM L_SQUARE_BRACKET NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER R_SQUARE_BRACKET
    (32) statement_transform -> . CONCAT_TRANSFORM L_SQUARE_BRACKET NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER R_SQUARE_BRACKET

    ATTRIBUTE_BEGIN shift and go to state 4
    ATTRIBUTE_END   shift and go to state 5
    TRANSFORM_BEGIN shift and go to state 6
    TRANSFORM_END   shift and go to state 7
    MATERIAL        shift and go to state 9
    NAMED_MATERIAL  shift and go to state 10
    MAKE_NAMED_MATERIAL shift and go to state 11
    TEXTURE         shift and go to state 12
    LIGHT_SOURCE    shift and go to state 13
    AREA_LIGHT_SOURCE shift and go to state 14
    OBJECT_BEGIN    shift and go to state 15
    OBJECT_END      shift and go to state 16
    OBJECT_INSTANCE shift and go to state 17
    SHAPE           shift and go to state 18
    REVERSE_ORIENTATION shift and go to state 19
    INCLUDE         shift and go to state 20
    IDENTITY        shift and go to state 21
    TRANSLATE       shift and go to state 22
    SCALE           shift and go to state 23
    ROTATE          shift and go to state 24
    LOOKAT          shift and go to state 25
    COORDINATE_SYSTEM shift and go to state 26
    COORDINATE_SYSTEM_TRANSFORM shift and go to state 27
    TRANSFORM       shift and go to state 28
    CONCAT_TRANSFORM shift and go to state 29

    statement_scene                shift and go to state 2
    statement_include              shift and go to state 3
    statement_transform            shift and go to state 8

state 2

    (9) statements_scene -> statements_scene statement_scene .

    ATTRIBUTE_BEGIN reduce using rule 9 (statements_scene -> statements_scene statement_scene .)
    ATTRIBUTE_END   reduce using rule 9 (statements_scene -> statements_scene statement_scene .)
    TRANSFORM_BEGIN reduce using rule 9 (statements_scene -> statements_scene statement_scene .)
    TRANSFORM_END   reduce using rule 9 (statements_scene -> statements_scene statement_scene .)
    MATERIAL        reduce using rule 9 (statements_scene -> statements_scene statement_scene .)
    NAMED_MATERIAL  reduce using rule 9 (statements_scene -> statements_scene statement_scene .)
    MAKE_NAMED_MATERIAL reduce using rule 9 (statements_scene -> statements_scene statement_scene .)
    TEXTURE         reduce using rule 9 (statements_scene -> statements_scene statement_scene .)
    LIGHT_SOURCE    reduce using rule 9 (statements_scene -> statements_scene statement_scene .)
    AREA_LIGHT_SOURCE reduce using rule 9 (statements_scene -> statements_scene statement_scene .)
    OBJECT_BEGIN    reduce using rule 9 (statements_scene -> statements_scene statement_scene .)
    OBJECT_END      reduce using rule 9 (statements_scene -> statements_scene statement_scene .)
    OBJECT_INSTANCE reduce using rule 9 (statements_scene -> statements_scene statement_scene .)
    SHAPE           reduce using rule 9 (statements_scene -> statements_scene statement_scene .)
    REVERSE_ORIENTATION reduce using rule 9 (statements_scene -> statements_scene statement_scene .)
    INCLUDE         reduce using rule 9 (statements_scene -> statements_scene statement_scene .)
    IDENTITY        reduce using rule 9 (statements_scene -> statements_scene statement_scene .)
    TRANSLATE       reduce using rule 9 (statements_scene -> statements_scene statement_scene .)
    SCALE           reduce using rule 9 (statements_scene -> statements_scene statement_scene .)
    ROTATE          reduce using rule 9 (statements_scene -> statements_scene statement_scene .)
    LOOKAT          reduce using rule 9 (statements_scene -> statements_scene statement_scene .)
    COORDINATE_SYSTEM reduce using rule 9 (statements_scene -> statements_scene statement_scene .)
    COORDINATE_SYSTEM_TRANSFORM reduce using rule 9 (statements_scene -> statements_scene statement_scene .)
    TRANSFORM       reduce using rule 9 (statements_scene -> statements_scene statement_scene .)
    CONCAT_TRANSFORM reduce using rule 9 (statements_scene -> statements_scene statement_scene .)
    $end            reduce using rule 9 (statements_scene -> statements_scene statement_scene .)


state 3

    (14) statement_scene -> statement_include .

    ATTRIBUTE_BEGIN reduce using rule 14 (statement_scene -> statement_include .)
    ATTRIBUTE_END   reduce using rule 14 (statement_scene -> statement_include .)
    TRANSFORM_BEGIN reduce using rule 14 (statement_scene -> statement_include .)
    TRANSFORM_END   reduce using rule 14 (statement_scene -> statement_include .)
    MATERIAL        reduce using rule 14 (statement_scene -> statement_include .)
    NAMED_MATERIAL  reduce using rule 14 (statement_scene -> statement_include .)
    MAKE_NAMED_MATERIAL reduce using rule 14 (statement_scene -> statement_include .)
    TEXTURE         reduce using rule 14 (statement_scene -> statement_include .)
    LIGHT_SOURCE    reduce using rule 14 (statement_scene -> statement_include .)
    AREA_LIGHT_SOURCE reduce using rule 14 (statement_scene -> statement_include .)
    OBJECT_BEGIN    reduce using rule 14 (statement_scene -> statement_include .)
    OBJECT_END      reduce using rule 14 (statement_scene -> statement_include .)
    OBJECT_INSTANCE reduce using rule 14 (statement_scene -> statement_include .)
    SHAPE           reduce using rule 14 (statement_scene -> statement_include .)
    REVERSE_ORIENTATION reduce using rule 14 (statement_scene -> statement_include .)
    INCLUDE         reduce using rule 14 (statement_scene -> statement_include .)
    IDENTITY        reduce using rule 14 (statement_scene -> statement_include .)
    TRANSLATE       reduce using rule 14 (statement_scene -> statement_include .)
    SCALE           reduce using rule 14 (statement_scene -> statement_include .)
    ROTATE          reduce using rule 14 (statement_scene -> statement_include .)
    LOOKAT          reduce using rule 14 (statement_scene -> statement_include .)
    COORDINATE_SYSTEM reduce using rule 14 (statement_scene -> statement_include .)
    COORDINATE_SYSTEM_TRANSFORM reduce using rule 14 (statement_scene -> statement_include .)
    TRANSFORM       reduce using rule 14 (statement_scene -> statement_include .)
    CONCAT_TRANSFORM reduce using rule 14 (statement_scene -> statement_include .)
    $end            reduce using rule 14 (statement_scene -> statement_include .)


state 4

    (17) statement_scene -> ATTRIBUTE_BEGIN .

    ATTRIBUTE_BEGIN reduce using rule 17 (statement_scene -> ATTRIBUTE_BEGIN .)
    ATTRIBUTE_END   reduce using rule 17 (statement_scene -> ATTRIBUTE_BEGIN .)
    TRANSFORM_BEGIN reduce using rule 17 (statement_scene -> ATTRIBUTE_BEGIN .)
    TRANSFORM_END   reduce using rule 17 (statement_scene -> ATTRIBUTE_BEGIN .)
    MATERIAL        reduce using rule 17 (statement_scene -> ATTRIBUTE_BEGIN .)
    NAMED_MATERIAL  reduce using rule 17 (statement_scene -> ATTRIBUTE_BEGIN .)
    MAKE_NAMED_MATERIAL reduce using rule 17 (statement_scene -> ATTRIBUTE_BEGIN .)
    TEXTURE         reduce using rule 17 (statement_scene -> ATTRIBUTE_BEGIN .)
    LIGHT_SOURCE    reduce using rule 17 (statement_scene -> ATTRIBUTE_BEGIN .)
    AREA_LIGHT_SOURCE reduce using rule 17 (statement_scene -> ATTRIBUTE_BEGIN .)
    OBJECT_BEGIN    reduce using rule 17 (statement_scene -> ATTRIBUTE_BEGIN .)
    OBJECT_END      reduce using rule 17 (statement_scene -> ATTRIBUTE_BEGIN .)
    OBJECT_INSTANCE reduce using rule 17 (statement_scene -> ATTRIBUTE_BEGIN .)
    SHAPE           reduce using rule 17 (statement_scene -> ATTRIBUTE_BEGIN .)
    REVERSE_ORIENTATION reduce using rule 17 (statement_scene -> ATTRIBUTE_BEGIN .)
    INCLUDE         reduce using rule 17 (statement_scene -> ATTRIBUTE_BEGIN .)
    IDENTITY        reduce using rule 17 (statement_scene -> ATTRIBUTE_BEGIN .)
    TRANSLATE       reduce using rule 17 (statement_scene -> ATTRIBUTE_BEGIN .)
    SCALE           reduce using rule 17 (statement_scene -> ATTRIBUTE_BEGIN .)
    ROTATE          reduce using rule 17 (statement_scene -> ATTRIBUTE_BEGIN .)
    LOOKAT          reduce using rule 17 (statement_scene -> ATTRIBUTE_BEGIN .)
    COORDINATE_SYSTEM reduce using rule 17 (statement_scene -> ATTRIBUTE_BEGIN .)
    COORDINATE_SYSTEM_TRANSFORM reduce using rule 17 (statement_scene -> ATTRIBUTE_BEGIN .)
    TRANSFORM       reduce using rule 17 (statement_scene -> ATTRIBUTE_BEGIN .)
    CONCAT_TRANSFORM reduce using rule 17 (statement_scene -> ATTRIBUTE_BEGIN .)
    $end            reduce using rule 17 (statement_scene -> ATTRIBUTE_BEGIN .)


state 5

    (18) statement_scene -> ATTRIBUTE_END .

    ATTRIBUTE_BEGIN reduce using rule 18 (statement_scene -> ATTRIBUTE_END .)
    ATTRIBUTE_END   reduce using rule 18 (statement_scene -> ATTRIBUTE_END .)
    TRANSFORM_BEGIN reduce using rule 18 (statement_scene -> ATTRIBUTE_END .)
    TRANSFORM_END   reduce using rule 18 (statement_scene -> ATTRIBUTE_END .)
    MATERIAL        reduce using rule 18 (statement_scene -> ATTRIBUTE_END .)
    NAMED_MATERIAL  reduce using rule 18 (statement_scene -> ATTRIBUTE_END .)
    MAKE_NAMED_MATERIAL reduce using rule 18 (statement_scene -> ATTRIBUTE_END .)
    TEXTURE         reduce using rule 18 (statement_scene -> ATTRIBUTE_END .)
    LIGHT_SOURCE    reduce using rule 18 (statement_scene -> ATTRIBUTE_END .)
    AREA_LIGHT_SOURCE reduce using rule 18 (statement_scene -> ATTRIBUTE_END .)
    OBJECT_BEGIN    reduce using rule 18 (statement_scene -> ATTRIBUTE_END .)
    OBJECT_END      reduce using rule 18 (statement_scene -> ATTRIBUTE_END .)
    OBJECT_INSTANCE reduce using rule 18 (statement_scene -> ATTRIBUTE_END .)
    SHAPE           reduce using rule 18 (statement_scene -> ATTRIBUTE_END .)
    REVERSE_ORIENTATION reduce using rule 18 (statement_scene -> ATTRIBUTE_END .)
    INCLUDE         reduce using rule 18 (statement_scene -> ATTRIBUTE_END .)
    IDENTITY        reduce using rule 18 (statement_scene -> ATTRIBUTE_END .)
    TRANSLATE       reduce using rule 18 (statement_scene -> ATTRIBUTE_END .)
    SCALE           reduce using rule 18 (statement_scene -> ATTRIBUTE_END .)
    ROTATE          reduce using rule 18 (statement_scene -> ATTRIBUTE_END .)
    LOOKAT          reduce using rule 18 (statement_scene -> ATTRIBUTE_END .)
    COORDINATE_SYSTEM reduce using rule 18 (statement_scene -> ATTRIBUTE_END .)
    COORDINATE_SYSTEM_TRANSFORM reduce using rule 18 (statement_scene -> ATTRIBUTE_END .)
    TRANSFORM       reduce using rule 18 (statement_scene -> ATTRIBUTE_END .)
    CONCAT_TRANSFORM reduce using rule 18 (statement_scene -> ATTRIBUTE_END .)
    $end            reduce using rule 18 (statement_scene -> ATTRIBUTE_END .)


state 6

    (19) statement_scene -> TRANSFORM_BEGIN .

    ATTRIBUTE_BEGIN reduce using rule 19 (statement_scene -> TRANSFORM_BEGIN .)
    ATTRIBUTE_END   reduce using rule 19 (statement_scene -> TRANSFORM_BEGIN .)
    TRANSFORM_BEGIN reduce using rule 19 (statement_scene -> TRANSFORM_BEGIN .)
    TRANSFORM_END   reduce using rule 19 (statement_scene -> TRANSFORM_BEGIN .)
    MATERIAL        reduce using rule 19 (statement_scene -> TRANSFORM_BEGIN .)
    NAMED_MATERIAL  reduce using rule 19 (statement_scene -> TRANSFORM_BEGIN .)
    MAKE_NAMED_MATERIAL reduce using rule 19 (statement_scene -> TRANSFORM_BEGIN .)
    TEXTURE         reduce using rule 19 (statement_scene -> TRANSFORM_BEGIN .)
    LIGHT_SOURCE    reduce using rule 19 (statement_scene -> TRANSFORM_BEGIN .)
    AREA_LIGHT_SOURCE reduce using rule 19 (statement_scene -> TRANSFORM_BEGIN .)
    OBJECT_BEGIN    reduce using rule 19 (statement_scene -> TRANSFORM_BEGIN .)
    OBJECT_END      reduce using rule 19 (statement_scene -> TRANSFORM_BEGIN .)
    OBJECT_INSTANCE reduce using rule 19 (statement_scene -> TRANSFORM_BEGIN .)
    SHAPE           reduce using rule 19 (statement_scene -> TRANSFORM_BEGIN .)
    REVERSE_ORIENTATION reduce using rule 19 (statement_scene -> TRANSFORM_BEGIN .)
    INCLUDE         reduce using rule 19 (statement_scene -> TRANSFORM_BEGIN .)
    IDENTITY        reduce using rule 19 (statement_scene -> TRANSFORM_BEGIN .)
    TRANSLATE       reduce using rule 19 (statement_scene -> TRANSFORM_BEGIN .)
    SCALE           reduce using rule 19 (statement_scene -> TRANSFORM_BEGIN .)
    ROTATE          reduce using rule 19 (statement_scene -> TRANSFORM_BEGIN .)
    LOOKAT          reduce using rule 19 (statement_scene -> TRANSFORM_BEGIN .)
    COORDINATE_SYSTEM reduce using rule 19 (statement_scene -> TRANSFORM_BEGIN .)
    COORDINATE_SYSTEM_TRANSFORM reduce using rule 19 (statement_scene -> TRANSFORM_BEGIN .)
    TRANSFORM       reduce using rule 19 (statement_scene -> TRANSFORM_BEGIN .)
    CONCAT_TRANSFORM reduce using rule 19 (statement_scene -> TRANSFORM_BEGIN .)
    $end            reduce using rule 19 (statement_scene -> TRANSFORM_BEGIN .)


state 7

    (20) statement_scene -> TRANSFORM_END .

    ATTRIBUTE_BEGIN reduce using rule 20 (statement_scene -> TRANSFORM_END .)
    ATTRIBUTE_END   reduce using rule 20 (statement_scene -> TRANSFORM_END .)
    TRANSFORM_BEGIN reduce using rule 20 (statement_scene -> TRANSFORM_END .)
    TRANSFORM_END   reduce using rule 20 (statement_scene -> TRANSFORM_END .)
    MATERIAL        reduce using rule 20 (statement_scene -> TRANSFORM_END .)
    NAMED_MATERIAL  reduce using rule 20 (statement_scene -> TRANSFORM_END .)
    MAKE_NAMED_MATERIAL reduce using rule 20 (statement_scene -> TRANSFORM_END .)
    TEXTURE         reduce using rule 20 (statement_scene -> TRANSFORM_END .)
    LIGHT_SOURCE    reduce using rule 20 (statement_scene -> TRANSFORM_END .)
    AREA_LIGHT_SOURCE reduce using rule 20 (statement_scene -> TRANSFORM_END .)
    OBJECT_BEGIN    reduce using rule 20 (statement_scene -> TRANSFORM_END .)
    OBJECT_END      reduce using rule 20 (statement_scene -> TRANSFORM_END .)
    OBJECT_INSTANCE reduce using rule 20 (statement_scene -> TRANSFORM_END .)
    SHAPE           reduce using rule 20 (statement_scene -> TRANSFORM_END .)
    REVERSE_ORIENTATION reduce using rule 20 (statement_scene -> TRANSFORM_END .)
    INCLUDE         reduce using rule 20 (statement_scene -> TRANSFORM_END .)
    IDENTITY        reduce using rule 20 (statement_scene -> TRANSFORM_END .)
    TRANSLATE       reduce using rule 20 (statement_scene -> TRANSFORM_END .)
    SCALE           reduce using rule 20 (statement_scene -> TRANSFORM_END .)
    ROTATE          reduce using rule 20 (statement_scene -> TRANSFORM_END .)
    LOOKAT          reduce using rule 20 (statement_scene -> TRANSFORM_END .)
    COORDINATE_SYSTEM reduce using rule 20 (statement_scene -> TRANSFORM_END .)
    COORDINATE_SYSTEM_TRANSFORM reduce using rule 20 (statement_scene -> TRANSFORM_END .)
    TRANSFORM       reduce using rule 20 (statement_scene -> TRANSFORM_END .)
    CONCAT_TRANSFORM reduce using rule 20 (statement_scene -> TRANSFORM_END .)
    $end            reduce using rule 20 (statement_scene -> TRANSFORM_END .)


state 8

    (23) statement_scene -> statement_transform .

    ATTRIBUTE_BEGIN reduce using rule 23 (statement_scene -> statement_transform .)
    ATTRIBUTE_END   reduce using rule 23 (statement_scene -> statement_transform .)
    TRANSFORM_BEGIN reduce using rule 23 (statement_scene -> statement_transform .)
    TRANSFORM_END   reduce using rule 23 (statement_scene -> statement_transform .)
    MATERIAL        reduce using rule 23 (statement_scene -> statement_transform .)
    NAMED_MATERIAL  reduce using rule 23 (statement_scene -> statement_transform .)
    MAKE_NAMED_MATERIAL reduce using rule 23 (statement_scene -> statement_transform .)
    TEXTURE         reduce using rule 23 (statement_scene -> statement_transform .)
    LIGHT_SOURCE    reduce using rule 23 (statement_scene -> statement_transform .)
    AREA_LIGHT_SOURCE reduce using rule 23 (statement_scene -> statement_transform .)
    OBJECT_BEGIN    reduce using rule 23 (statement_scene -> statement_transform .)
    OBJECT_END      reduce using rule 23 (statement_scene -> statement_transform .)
    OBJECT_INSTANCE reduce using rule 23 (statement_scene -> statement_transform .)
    SHAPE           reduce using rule 23 (statement_scene -> statement_transform .)
    REVERSE_ORIENTATION reduce using rule 23 (statement_scene -> statement_transform .)
    INCLUDE         reduce using rule 23 (statement_scene -> statement_transform .)
    IDENTITY        reduce using rule 23 (statement_scene -> statement_transform .)
    TRANSLATE       reduce using rule 23 (statement_scene -> statement_transform .)
    SCALE           reduce using rule 23 (statement_scene -> statement_transform .)
    ROTATE          reduce using rule 23 (statement_scene -> statement_transform .)
    LOOKAT          reduce using rule 23 (statement_scene -> statement_transform .)
    COORDINATE_SYSTEM reduce using rule 23 (statement_scene -> statement_transform .)
    COORDINATE_SYSTEM_TRANSFORM reduce using rule 23 (statement_scene -> statement_transform .)
    TRANSFORM       reduce using rule 23 (statement_scene -> statement_transform .)
    CONCAT_TRANSFORM reduce using rule 23 (statement_scene -> statement_transform .)
    $end            reduce using rule 23 (statement_scene -> statement_transform .)


state 9

    (33) statement_scene -> MATERIAL . STRING arguments

    STRING          shift and go to state 30


state 10

    (34) statement_scene -> NAMED_MATERIAL . STRING

    STRING          shift and go to state 31


state 11

    (35) statement_scene -> MAKE_NAMED_MATERIAL . STRING arguments

    STRING          shift and go to state 32


state 12

    (36) statement_scene -> TEXTURE . STRING STRING STRING arguments

    STRING          shift and go to state 33


state 13

    (37) statement_scene -> LIGHT_SOURCE . STRING arguments

    STRING          shift and go to state 34


state 14

    (38) statement_scene -> AREA_LIGHT_SOURCE . STRING arguments

    STRING          shift and go to state 35


state 15

    (39) statement_scene -> OBJECT_BEGIN . STRING

    STRING          shift and go to state 36


state 16

    (40) statement_scene -> OBJECT_END .

    ATTRIBUTE_BEGIN reduce using rule 40 (statement_scene -> OBJECT_END .)
    ATTRIBUTE_END   reduce using rule 40 (statement_scene -> OBJECT_END .)
    TRANSFORM_BEGIN reduce using rule 40 (statement_scene -> OBJECT_END .)
    TRANSFORM_END   reduce using rule 40 (statement_scene -> OBJECT_END .)
    MATERIAL        reduce using rule 40 (statement_scene -> OBJECT_END .)
    NAMED_MATERIAL  reduce using rule 40 (statement_scene -> OBJECT_END .)
    MAKE_NAMED_MATERIAL reduce using rule 40 (statement_scene -> OBJECT_END .)
    TEXTURE         reduce using rule 40 (statement_scene -> OBJECT_END .)
    LIGHT_SOURCE    reduce using rule 40 (statement_scene -> OBJECT_END .)
    AREA_LIGHT_SOURCE reduce using rule 40 (statement_scene -> OBJECT_END .)
    OBJECT_BEGIN    reduce using rule 40 (statement_scene -> OBJECT_END .)
    OBJECT_END      reduce using rule 40 (statement_scene -> OBJECT_END .)
    OBJECT_INSTANCE reduce using rule 40 (statement_scene -> OBJECT_END .)
    SHAPE           reduce using rule 40 (statement_scene -> OBJECT_END .)
    REVERSE_ORIENTATION reduce using rule 40 (statement_scene -> OBJECT_END .)
    INCLUDE         reduce using rule 40 (statement_scene -> OBJECT_END .)
    IDENTITY        reduce using rule 40 (statement_scene -> OBJECT_END .)
    TRANSLATE       reduce using rule 40 (statement_scene -> OBJECT_END .)
    SCALE           reduce using rule 40 (statement_scene -> OBJECT_END .)
    ROTATE          reduce using rule 40 (statement_scene -> OBJECT_END .)
    LOOKAT          reduce using rule 40 (statement_scene -> OBJECT_END .)
    COORDINATE_SYSTEM reduce using rule 40 (statement_scene -> OBJECT_END .)
    COORDINATE_SYSTEM_TRANSFORM reduce using rule 40 (statement_scene -> OBJECT_END .)
    TRANSFORM       reduce using rule 40 (statement_scene -> OBJECT_END .)
    CONCAT_TRANSFORM reduce using rule 40 (statement_scene -> OBJECT_END .)
    $end            reduce using rule 40 (statement_scene -> OBJECT_END .)


state 17

    (41) statement_scene -> OBJECT_INSTANCE . STRING

    STRING          shift and go to state 37


state 18

    (42) statement_scene -> SHAPE . STRING arguments

    STRING          shift and go to state 38


state 19

    (43) statement_scene -> REVERSE_ORIENTATION .
